--- a/real_polls/polls/templates/base.html
+++ b/real_polls/polls/templates/base.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+	{% include "polls/navbar.html" %}
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 m-auto">
