--- a/real_polls/polls/templates/polls/index.html
+++ b/real_polls/polls/templates/polls/index.html
@@ -1,5 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-	Polls
+	<h1 class="text-cente mb-3">
+		Poll Questions
+	</h1>
+	{% if latest_question_list %}
+		{% for question in latest_question_list %}
+			<div class="card mb-3">
+				<div class="card-body">
+					<p class="lead"> {{ question.question_text }} </p>
+					<a class="btn btn-primary" href=" {% url 'polls:detail' question.id %}">
+						Vote Now
+					</a>
+					<a class="btn btn-secondary" href="{% url 'polls:results' question.id %}" >
+						Results
+					</a>
+				</div>
+			</div>
+		{% endfor %}
+	{% else %}
+		<p>No polls available</p>
+	{% endif %}
 {% endblock  %}
