--- a/real_polls/polls/templates/polls/index.html
+++ b/real_polls/polls/templates/polls/index.html
@@ -4,15 +4,15 @@
 	<h1 class="text-cente mb-3">
 		Poll Questions
 	</h1>
-	{% if latest_question_list %}
-		{% for question in latest_question_list %}
+	{% if questions_list %}
+		{% for each_question in questions_list %}
 			<div class="card mb-3">
 				<div class="card-body">
-					<p class="lead"> {{ question.question_text }} </p>
-					<a class="btn btn-primary" href=" {% url 'polls:detail' question.id %}">
+					<p class="lead"> {{ each_question.question }} </p>
+					<a class="btn btn-primary" href="#">
 						Vote Now
 					</a>
-					<a class="btn btn-secondary" href="{% url 'polls:results' question.id %}" >
+					<a class="btn btn-secondary" href="#" >
 						Results
 					</a>
 				</div>
