--- a/real_polls/polls/templates/polls/navbar.html
+++ b/real_polls/polls/templates/polls/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-dark bg-primary mb-4">
 	<div class="container">
 		<a href="/" class="navbar-brand">Real Polls</a>
+		<a href="{% url 'polls:add_poll' %}" class="navbar-brand">Add a Poll</a>
 	</div>
 </nav>
